# Elite_Robots_CS_SDK_Python

./: .gitignore  CMakeLists.txt  ChangeLog.cn.md  ChangeLog.md  README.md  README_CN.md  macos_fixes.patch
doc/API/API/cn/: ControllerLog.cn.md  Dashboard.cn.md  EliteDriver.cn.md  EliteDriverConfig.cn.md  Log.cn.md  PrimaryPort.cn.md  RTSI.cn.md  RTUtils.cn.md  RemoteUpgrade.cn.md  RobotException.cn.md  SerialCommunication.cn.md  VersionInfo.cn.md
doc/API/API/en/: API.en.md  ControllerLog.en.md  Dashboard.en.md  EliteDriver.en.md  EliteDriverConfig.en.md  Log.en.md  PrimaryPort.en.md  RTSI.en.md  RTUtils.en.md  RemoteUpgrade.en.md  RobotException.en.md  SerialCommunication.en.md  VersionInfo.en.md
doc/BuildGuide/: BuildGuide.cn.md  BuildGuide.en.md
examples/: connect_robot_test.py  example_dashboard_client.py  example_freedrive.py  example_primary_client.py  example_rtsi_client.py  example_serial.py  example_servoj_plan.py  example_speedl.py  example_trajectory.py
src/cpp/: CMakeLists.txt
src/cpp/src/: ControllerLogWrapper.cpp  ControllerLogWrapper.hpp  DashboardClientWrapper.cpp  DashboardClientWrapper.hpp  DataTypeWrapper.cpp  DataTypeWrapper.hpp  EliteDriverWrapper.cpp  EliteDriverWrapper.hpp  LogWrapper.cpp  LogWrapper.hpp  MainModule.cpp  PrimaryPackageWrapper.cpp  PrimaryPackageWrapper.hpp  PrimaryPortInterfaceWrapper.cpp  PrimaryPortInterfaceWrapper.hpp  RemoteUpgradeWrapper.cpp  RemoteUpgradeWrapper.hpp  RobotConfPackageWrapper.cpp  RobotConfPackageWrapper.hpp  RobotExceptionWrapper.cpp  RobotExceptionWrapper.hpp  RtUtilsWrapper.cpp  RtUtilsWrapper.hpp  RtsiClientInterfaceWrapper.cpp  RtsiClientInterfaceWrapper.hpp  RtsiIOInterfaceWrapper.cpp  RtsiIOInterfaceWrapper.hpp  RtsiRecipeWrapper.cpp  RtsiRecipeWrapper.hpp  SerialCommunicationWrapper.cpp  SerialCommunicationWrapper.hpp  VersionInfoWrapper.cpp  VersionInfoWrapper.hpp
src/python/: setup.cfg  setup.py
src/python/package/elite_cs_sdk/: __init__.py  elite_cs_sdk.py
